# Autonomous-Drone-Person-Tracker-with-Gazebo--ROS--YOLO

./: .gitignore  README.md
src/: .rosinstall  .rosinstall.bak
src/iq_sim/launch/: flat_city.launch  hills.launch
src/iq_sim/scripts/: run_flat_city.sh
src/iq_sim/worlds/: OPTIMIZATION_NOTES.md  hills.world  hills.world.bak2  hills_backup.world
src/obj_detect/: package.xml
src/obj_detect/yolov5/: integrated_drone_detect_with_mot.py
