<?xml version="1.0"?>
<package format="2">
  <name>obj_detect</name>
  <version>1.0.0</version>
  <description>YOLOv5 Object Detection Package</description>

  <maintainer email="abdullah@example.com">Abdullah</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>mavros_msgs</depend>

  <export>
  </export>
</package>
